[gd_scene load_steps=7 format=3 uid="uid://b0xx3a4p7hpok"]

[ext_resource type="Script" uid="uid://hmibq1xlc632" path="res://scenes/headline_display_fog/headline_display_fog.gd" id="1_2dxv7"]
[ext_resource type="VideoStream" uid="uid://bkk2ohh8c3l3c" path="res://assets/textures/bg.mp4" id="2_vkve5"]
[ext_resource type="FontFile" uid="uid://bekxd0q6ttpao" path="res://assets/din1451alt.ttf" id="5_de6vq"]

[sub_resource type="LabelSettings" id="LabelSettings_de6vq"]
font = ExtResource("5_de6vq")
font_size = 56

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5hy2c"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_de6vq"]
bg_color = Color(0.6, 0.11667624, 0.10772324, 1)
corner_detail = 1

[node name="HeadlineDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2dxv7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778
stretch_mode = 3

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="AspectRatioContainer"]
layout_mode = 2
stream = ExtResource("2_vkve5")
autoplay = true
expand = true
loop = true

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="CenterContainer" type="CenterContainer" parent="AspectRatioContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer2/CenterContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
text = "Example headline Example headline Example headline Example headline Example headline Example headline"
label_settings = SubResource("LabelSettings_de6vq")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_5hy2c")
theme_override_styles/fill = SubResource("StyleBoxFlat_de6vq")
value = 43.16
show_percentage = false

[node name="BetweenTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="timeout" from="BetweenTimer" to="." method="_on_between_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
